--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@babel/register": "^7.8.6",
         "babel-preset-es2015": "^6.24.1",
         "browser-sync": "^2.26.7",
+        "del": "^5.1.0",
         "gulp": "^4.0.2",
         "gulp-babel": "^8.0.0",
         "gulp-htmlmin": "^5.0.1",
