--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "init",
-    "version": "3.0.0",
+    "version": "3.2.0",
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -21,6 +21,7 @@
         "gulp-imagemin": "^7.1.0",
         "gulp-include": "^2.4.1",
         "gulp-newer": "^1.4.0",
+        "gulp-replace": "^1.0.0",
         "gulp-sass": "^4.0.2",
         "gulp-sass-lint": "^1.4.0"
     },
